# shaderoom

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  exceptions.py  logger.py  main.py  model.py  pyproject.toml  settings.py  util.py
backend/src/: app.py  config.py  logging.py  schemas.py
backend/src/api/: dependencies.py  routes.py
backend/src/services/: encoder.py  preprocessing.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CanvasImage.jsx  ComparisionSlider.jsx  Footer.jsx  Header.jsx  ImageColorsExtractor.jsx  ImageCropper.jsx  ImageEditor.jsx  ImageUploader.jsx  Modal.jsx  RecommendedColors.jsx  RecommendedTextures.jsx  Sidebar.jsx  Stepper.jsx  ViewShades.jsx  selectFromPalette.jsx
frontend/src/components/canvas/: AppliedShadeLayer.jsx  CompareSliderOverlay.jsx  MaskControls.jsx  MaskItem.jsx  MaskShape.jsx  ViewModeSwitcher.jsx  ZoomControls.jsx
frontend/src/components/content/: SaveShare.jsx  SelectImage.jsx  SelectShades.jsx  ShadeRoom.jsx
frontend/src/components/modes/: HoverMode.jsx  LassoMode.jsx  PenMode.jsx
frontend/src/data/: predefinedImages.js  recommendedColors.js  recommendedTexture.js  stepsConfig.js
frontend/src/hooks/: useTheme.js
frontend/src/hooks/editor/: editorContext.js  editorProvider.jsx
frontend/src/pages/: Journey.jsx  Landing.jsx
frontend/src/utils/: colors.js  cropper.js  imageHelpers.js  modelHelpers.js  modesHelper.js  perspective.js
(+4 files in other folders)
